--- a/app/rust/.cargo/config.toml
+++ b/app/rust/.cargo/config.toml
@@ -1,13 +1,23 @@
-[build]
+
+[unstable]
+build-std = ["core"]
+build-std-features = ["panic_immediate_abort"]
+target-applies-to-host = true
+host-config = true
+
+[host]
+rustflags = ["-Ctarget-feature=-crt-static"]
 
 [target.'cfg(all(target_arch = "arm", target_os = "none"))']
 rustflags = [
-    "--emit", "asm",
-	"-C", "relocation-model=ropi",
-    "-C", "link-arg=-nostartfiles",
-    "-C", "link-arg=-Tlink.ld",
-    "-C", "inline-threshold=0"
+    "--emit",
+    "asm",
+    "-C",
+    "relocation-model=ropi",
+    "-C",
+    "link-arg=-nostartfiles",
+    "-C",
+    "link-arg=-Tlink.ld",
+    "-C",
+    "inline-threshold=0",
 ]
-[unstable]
-build-std=["core"]
-build-std-features=["panic_immediate_abort"]
