--- a/app/rust/Cargo.toml
+++ b/app/rust/Cargo.toml
@@ -18,6 +18,7 @@ sha2 = { version = "0.10.8", default-features = false }
 arrayref = { version = "0.3.7", default-features = false }
 nom = { version = "7.1.3", default-features = false }
 bolos = { path = "../../deps/ledger-rust/bolos" }
+zemu-sys = { path = "../../deps/ledger-rust/zemu" }
 # bolos-common = { path = "../../deps/ledger-rust/bolos-common" }
 
 [dev-dependencies]
@@ -26,6 +27,7 @@ hex = { version = "0.4" }
 minicbor = { version = "0.24.2", features = ["std"] }
 ic-certification = { version = "2.5.0", features = ["serde"] }
 serde_cbor = "0.11.2"
+zuit = { path = "../../deps/ledger-rust/zuit" }
 
 
 [target.'cfg(fuzzing)'.dependencies]
