--- a/app/rust/Cargo.toml
+++ b/app/rust/Cargo.toml
@@ -13,7 +13,8 @@ crate-type = ["staticlib"]
 [dependencies]
 minicbor = { version = "0.24.2", default-features = false }
 no-std-compat = { version = "0.4.1" }
-bls_signature = { package = "ic-verify-bls-signature", version = "0.3.0", default-features = false }
+# bls_signature = { package = "ic-verify-bls-signature", version = "0.6.0", default-features = false }
+bls_signature = { package = "ic-verify-bls-signature", version = "0.6.0", default-features = false }
 sha2 = { version = "0.10.8", default-features = false }
 arrayref = { version = "0.3.7", default-features = false }
 nom = { version = "7.1.3", default-features = false }
