--- a/app/rust/Cargo.toml
+++ b/app/rust/Cargo.toml
@@ -26,7 +26,10 @@ hex = { version = "0.4" }
 minicbor = { version = "0.24.2", features = ["std"] }
 ic-certification = { version = "2.5.0", features = ["serde"] }
 serde_cbor = "0.11.2"
+serde_json = "1.0.85"
 zuit = { path = "../../deps/ledger-rust/zuit" }
+insta = { version = "1", features = ["glob"] }
+serde = { version = "1.0.215", features = ["derive"] }
 
 
 [target.'cfg(fuzzing)'.dependencies]
@@ -43,3 +46,4 @@ panic = "abort"
 
 [features]
 clippy = []
+derive-debug = []
