Move iterator to its own module Use iterator and add another Msg struct to cach number of items and optimize review flow
Use new UI resource
Update zxlib

Export heardbeat and util function to debug numbers

Use consentInfo as the ui handlers

Fix warnings

Use panic abort and reduce binary size

Update test and pad with spaces

Adjust test as we do not longer support screen width smaller that lines

Serialize test

Update snapshots

--- a/app/rust/Cargo.toml
+++ b/app/rust/Cargo.toml
@@ -41,7 +41,8 @@ debug = false
 opt-level = "z"
 lto = "thin"
 overflow-checks = false
-strip = true
+strip = "symbols"
+panic = "abort"
 
 [profile.dev]
 panic = "abort"
