--- a/app/rust/Cargo.toml
+++ b/app/rust/Cargo.toml
@@ -19,6 +19,7 @@ arrayref = { version = "0.3.7", default-features = false }
 nom = { version = "7.1.3", default-features = false }
 bolos = { path = "../../deps/ledger-rust/bolos" }
 zemu-sys = { path = "../../deps/ledger-rust/zemu" }
+cfg-if = "1.0.0"
 
 [dev-dependencies]
 no-std-compat = { version = "0.4.1", features = ["std"] }
