--- a/app/rust/.cargo/config.toml
+++ b/app/rust/.cargo/config.toml
@@ -6,7 +6,7 @@ target-applies-to-host = true
 host-config = true
 
 [host]
-rustflags = ["-Ctarget-feature=-crt-static"]
+rustflags = ["-Ctarget-feature=-crt-static", "-Aunexpected_cfgs"]
 
 [target.'cfg(all(target_arch = "arm", target_os = "none"))']
 rustflags = [
@@ -18,6 +18,5 @@ rustflags = [
     "link-arg=-nostartfiles",
     "-C",
     "link-arg=-Tlink.ld",
-    "-C",
-    "inline-threshold=0",
+    "-Aunexpected_cfgs",
 ]
