--- a/app/rust/Cargo.toml
+++ b/app/rust/Cargo.toml
@@ -19,6 +19,7 @@ arrayref = { version = "0.3.7", default-features = false }
 nom = { version = "7.1.3", default-features = false }
 bolos = { path = "../../deps/ledger-rust/bolos" }
 zemu-sys = { path = "../../deps/ledger-rust/zemu" }
+cfg-if = "1.0.0"
 
 [dev-dependencies]
 no-std-compat = { version = "0.4.1", features = ["std"] }
@@ -36,13 +37,10 @@ serde = { version = "1.0.215", features = ["derive"] }
 no-std-compat = { version = "0.4.1", features = ["std"] }
 
 [profile.release]
+lto = false
 codegen-units = 1
 debug = false
 opt-level = "z"
-lto = "thin"
-overflow-checks = false
-strip = "symbols"
-panic = "abort"
 
 [profile.dev]
 panic = "abort"
@@ -50,3 +48,4 @@ panic = "abort"
 [features]
 clippy = []
 derive-debug = []
+fuzzing = ["derive-debug"]
