--- a/app/Makefile
+++ b/app/Makefile
@@ -20,59 +20,111 @@ ifeq ($(BOLOS_SDK),)
 $(error BOLOS_SDK is not set)
 endif
 
-MY_DIR := $(dir $(lastword $(MAKEFILE_LIST)))
-
-include $(CURDIR)/../deps/ledger-zxlib/makefiles/Makefile.installer_script
-
+########################################
+#        Mandatory configuration       #
+########################################
+# Upload targets to configure the devices 
 include $(BOLOS_SDK)/Makefile.defines
+
+APPNAME = "InternetComputer"
+
+# Application version
+include $(CURDIR)/Makefile.version
+APPVERSION = "$(APPVERSION_M).$(APPVERSION_N).$(APPVERSION_P)"
+
+# Application source files
+APP_SOURCE_PATH += src
+APP_SOURCE_PATH += $(CURDIR)/../deps/tinycbor-ledger
+APP_SOURCE_PATH += $(CURDIR)/../deps/nanopb_tiny/
+
+# Application icons following guidelines:
+# https://developers.ledger.com/docs/embedded-app/design-requirements/#device-icon
+ICON_NANOS = nanos_icon.gif
+ICON_NANOX = nanox_icon.gif
+ICON_NANOSP = nanox_icon.gif
+ICON_STAX = stax_icon.gif
+ICON_FLEX = flex_icon.gif
+
+# Application allowed derivation curves.
+# Possibles curves are: secp256k1, secp256r1, ed25519 and bls12381g1
+# If your app needs it, you can specify multiple curves by using:
+# `CURVE_APP_LOAD_PARAMS = <curve1> <curve2>`
+CURVE_APP_LOAD_PARAMS = secp256k1
+
+# Application allowed derivation paths.
+# You should request a specific path for your app.
+# This serve as an isolation mechanism.
+# Most application will have to request a path according to the BIP-0044
+# and SLIP-0044 standards.
+# If your app needs it, you can specify multiple path by using:
+# `PATH_APP_LOAD_PARAMS = "44'/1'" "45'/1'"`
+APPPATH = "44'/223'"
+$(info PATHS LIST = $(APPPATH))
+PATH_APP_LOAD_PARAMS = $(APPPATH)
+
+# Setting to allow building variant applications
+# - <VARIANT_PARAM> is the name of the parameter which should be set
+#   to specify the variant that should be build.
+# - <VARIANT_VALUES> a list of variant that can be build using this app code.
+#   * It must at least contains one value.
+#   * Values can be the app ticker or anything else but should be unique.
+ifeq ($(COIN),)
+    COIN=ICP
+endif
+$(info COIN  = [$(COIN)])
+VARIANT_PARAM=COIN
+VARIANT_VALUES=$(COIN)
+
+# Include paths
+INCLUDES_PATH += $(CURDIR)/src/common
+INCLUDES_PATH += $(CURDIR)/../deps/tinycbor/src
+INCLUDES_PATH += $(CURDIR)/../deps/nanopb/
+
+########################################
+#         NBGL custom features         # F
+########################################
+ENABLE_NBGL_QRCODE = 1
+#ENABLE_NBGL_KEYBOARD = 1
+#ENABLE_NBGL_KEYPAD = 1
+
+########################################
+#          Features disablers          #
+########################################
+# These advanced settings allow to disable some feature that are by
+# default enabled in the SDK `Makefile.standard_app`.
+#DISABLE_STANDARD_APP_FILES = 1
+#DISABLE_DEFAULT_IO_SEPROXY_BUFFER_SIZE = 1 # To allow custom size declaration
+#DISABLE_STANDARD_APP_DEFINES = 1 # Will set all the following disablers
+#DISABLE_STANDARD_SNPRINTF = 1
+#DISABLE_STANDARD_USB = 1
+#DISABLE_STANDARD_WEBUSB = 1
+#DISABLE_DEBUG_LEDGER_ASSERT = 1
+#DISABLE_DEBUG_THROW = 1
+
+########################################
+#        Other configurations          #
+########################################
 # Set the default value for PRODUCTION_BUILD to 0 if not already defined
 PRODUCTION_BUILD ?= 1
-
-$(info ************ TARGET_NAME  = [$(TARGET_NAME)])
-
 # Display whether this is a production build or for internal use
 ifeq ($(PRODUCTION_BUILD), 1)
     $(info ************ PRODUCTION_BUILD  = [PRODUCTION BUILD])
 else
     $(info ************ PRODUCTION_BUILD  = [INTERNAL USE])
 endif
-
-# Add the PRODUCTION_BUILD definition to the compiler flags
+ # Add the PRODUCTION_BUILD definition to the compiler flags
 DEFINES += PRODUCTION_BUILD=$(PRODUCTION_BUILD)
 
-include $(CURDIR)/../deps/ledger-zxlib/makefiles/Makefile.app_testing
+########################################
 
-ifndef COIN
-COIN=ICP
-endif
-
-include $(CURDIR)/Makefile.version
-
-$(info COIN  = [$(COIN)])
-
-ifeq ($(COIN),ICP)
-# Main app configuration
-DEFINES += APP_STANDARD
-APPNAME = "InternetComputer"
-APPPATH = "44'/223'"
-
-else ifeq ($(COIN),ICP_INVALID)
-else
-define error_message
-
-COIN value not supported: [$(COIN)]
-
-endef
-$(error "$(error_message)")
-endif
-
-APP_LOAD_PARAMS = --curve secp256k1 $(COMMON_LOAD_PARAMS) --path $(APPPATH)
-
+# Configure devices and permissions
 include $(CURDIR)/../deps/ledger-zxlib/makefiles/Makefile.devices
-RUST_TARGET := thumbv6m-none-eabi
-
-$(info TARGET_NAME  = [$(TARGET_NAME)])
-$(info ICONNAME  = [$(ICONNAME)])
+# Create installer script
+include $(CURDIR)/../deps/ledger-zxlib/makefiles/Makefile.installer_script
+# Enable logging
+include $(CURDIR)/../deps/ledger-zxlib/makefiles/Makefile.app_testing
+# Call standard app flags
+include $(CURDIR)/../deps/ledger-zxlib/makefiles/Makefile.platform
 
 # Enable bls signature verification for all targets except TARGET_NANOS and TARGET_NANOX
 ifneq ($(TARGET_NAME),TARGET_NANOS)
@@ -82,82 +134,17 @@ DEFINES += BLS_SIGNATURE=$(BLS_SIGNATURE)
 endif
 endif
 
-RUST_TARGET_NAME := $(TARGET_NAME)
+# Include Rust-specific build rules
+include $(CURDIR)/Makefile.rust
 
-NBGL_TARGETS := TARGET_STAX TARGET_FLEX
-ifeq ($(TARGET_NAME),$(filter $(TARGET_NAME), $(NBGL_TARGETS)))
-RUST_TARGET_NAME := TARGET_STAX
-endif
-
-ifndef ICONNAME
+$(info TARGET_NAME  = [$(TARGET_NAME)])
+$(info ICONNAME  = [$(ICONNAME)])
+ifeq ($(ICONNAME),)
 $(error ICONNAME is not set)
 endif
 
-include $(CURDIR)/../deps/ledger-zxlib/makefiles/Makefile.platform
-CFLAGS += -Wvla  -Wno-implicit-fallthrough
-CFLAGS += -I$(MY_DIR)/../deps/tinycbor/src
-APP_SOURCE_PATH += $(MY_DIR)/../deps/tinycbor-ledger
-LDFLAGS  += -z muldefs
-
-ifdef BLS_SIGNATURE
-LDLIBS   += -Lrust/target/$(RUST_TARGET)/release -lrslib
-endif
-
-APP_SOURCE_PATH += $(MY_DIR)/rust/include
-
-CFLAGS += -I$(MY_DIR)/../deps/nanopb/
-APP_SOURCE_PATH += $(MY_DIR)/../deps/nanopb_tiny/
-
-
-# Check if BLS_SIGNATURE is set
-ifdef BLS_SIGNATURE
-
-APP_CUSTOM_LINK_DEPENDENCIES = rust
-
-.PHONY: rust
-rust:
-	cd rust && RUSTC_BOOTSTRAP=1 CARGO_HOME="$(CURDIR)/rust/.cargo" TARGET_NAME=$(RUST_TARGET_NAME) cargo build --target $(RUST_TARGET) --release
-
-.PHONY: rust_clean
-rust_clean:
-	cd rust && CARGO_HOME="$(CURDIR)/rust/.cargo" cargo clean
-
-clean: rust_clean
-
-.PHONY: rust_tests
-rust_tests:
-	cd rust && CARGO_HOME="$(CURDIR)/rust/.cargo" cargo test
-else
-# Empty rules when BLS_SIGNATURE is not set
-.PHONY: rust
-rust:
-	@echo "Skipping Rust build (BLS_SIGNATURE not set)"
-
-.PHONY: rust_clean
-rust_clean:
-	@echo "Skipping Rust clean (BLS_SIGNATURE not set)"
-
-.PHONY: rust_tests
-rust_tests:
-	@echo "Skipping Rust tests (BLS_SIGNATURE not set)"
-
-endif
-
-ifdef BLS_SIGNATURE
-clean: rust_clean
-endif
-
-include $(CURDIR)/../deps/ledger-zxlib/makefiles/Makefile.side_loading
-
-# Import generic rules from the SDK
-include $(BOLOS_SDK)/Makefile.rules
-
-#add dependency on custom makefile filename
-dep/%.d: %.c Makefile
-
-.PHONY: listvariants
-listvariants:
-	@echo VARIANTS COIN ICP
+# make rust a prerequisite for all object files
+$(OBJECT_FILES): | rust
 
 .PHONY: version
 version:
