BlindSign Flow for Consent Requests

--- a/app/Makefile
+++ b/app/Makefile
@@ -114,6 +114,7 @@ else
 endif
  # Add the PRODUCTION_BUILD definition to the compiler flags
 DEFINES += PRODUCTION_BUILD=$(PRODUCTION_BUILD)
+DEFINES += APP_BLINDSIGN_MODE_ENABLED
 
 ########################################
 
