--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,25 +30,44 @@ jobs:
       - run: make cpp_test
 
   build_ledger:
-    needs: configure
+    needs: [configure, setup_rust]
     runs-on: ubuntu-latest
     container:
       image: zondax/ledger-app-builder:latest
-      options: --user ${{ needs.configure.outputs.uid_gid }}
+      options: --user root
       env:
         BOLOS_SDK: /opt/nanos-secure-sdk
+        HOME: /root
+        CARGO_HOME: ${{ needs.setup_rust.outputs.cargo_home }}
+        RUSTUP_HOME: ${{ needs.setup_rust.outputs.rustup_home }}
+        PATH: /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:${{ needs.setup_rust.outputs.cargo_home }}/bin
     outputs:
       size: ${{steps.build.outputs.size}}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          submodules: true
+          submodules: recursive
+      - name: Setup Rust environment
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          target: thumbv6m-none-eabi
+          override: true
+      - name: Cache Rust dependencies
+        uses: actions/cache@v3
+        with:
+          path: |
+            ${{ needs.setup_rust.outputs.cargo_home }}
+            target/
+          key: ${{ runner.os }}-rust-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-rust-
       - name: Build Standard app
         id: build
         shell: bash -l {0}
         run: |
-          make
+          make 
           echo "size=$(python3 deps/ledger-zxlib/scripts/getSize.py s)" >> $GITHUB_OUTPUT
 
   clippy:
@@ -91,6 +110,17 @@ jobs:
       - name: run rust tests
         run: cd ./app/rust
           cargo test
+
+  setup_rust:
+    runs-on: ubuntu-latest
+    outputs:
+      cargo_home: ${{ steps.set_paths.outputs.cargo_home }}
+      rustup_home: ${{ steps.set_paths.outputs.rustup_home }}
+    steps:
+      - id: set_paths
+        run: |
+          echo "cargo_home=$GITHUB_WORKSPACE/app/rust/.cargo" >> $GITHUB_OUTPUT
+          echo "rustup_home=$GITHUB_WORKSPACE/app/rust/.rustup" >> $GITHUB_OUTPUT
 
   build_application:
     name: Build application using the reusable workflow
@@ -185,19 +215,39 @@ jobs:
           path: tests_zemu/snapshots-tmp/
 
   build_package_nanos:
-    needs: [configure, build, build_ledger, test_zemu]
+    needs: [configure, setup_rust, build, build_ledger, test_zemu]
     if: ${{ github.ref == 'refs/heads/main' }}
     runs-on: ubuntu-latest
     container:
       image: zondax/ledger-app-builder:latest
-      options: --user ${{ needs.configure.outputs.uid_gid }}
+      options: --user root
       env:
         BOLOS_SDK: /opt/nanos-secure-sdk
+        HOME: /root
+        CARGO_HOME: ${{ needs.setup_rust.outputs.cargo_home }}
+        RUSTUP_HOME: ${{ needs.setup_rust.outputs.rustup_home }}
+        PATH: /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:${{ needs.setup_rust.outputs.cargo_home }}/bin
     steps:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          submodules: true
+          submodules: recursive
+      - name: Setup Rust environment
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          target: thumbv6m-none-eabi
+          override: true
+          profile: minimal
+      - name: Cache Rust dependencies
+        uses: actions/cache@v3
+        with:
+          path: |
+            ${{ needs.setup_rust.outputs.cargo_home }}
+            target/
+          key: ${{ runner.os }}-rust-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-rust-
       - name: Install deps
         run: pip install ledgerblue --break-system-packages
 
@@ -221,19 +271,47 @@ jobs:
           prerelease: false
 
   build_package_nanosp:
-    needs: [configure, build, build_ledger, test_zemu, rust_tests]
+    needs:
+      [
+        configure,
+        setup_rust,
+        build_ledger,
+        tests_zemu_setup,
+        test_zemu,
+        rust_tests,
+      ]
     if: ${{ github.ref == 'refs/heads/main' }}
     runs-on: ubuntu-latest
     container:
       image: zondax/ledger-app-builder:latest
-      options: --user ${{ needs.configure.outputs.uid_gid }}
+      options: --user root
       env:
         BOLOS_SDK: /opt/nanosplus-secure-sdk
+        HOME: /root
+        CARGO_HOME: ${{ needs.setup_rust.outputs.cargo_home }}
+        RUSTUP_HOME: ${{ needs.setup_rust.outputs.rustup_home }}
+        PATH: /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:${{ needs.setup_rust.outputs.cargo_home }}/bin
     steps:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          submodules: true
+          submodules: recursive
+      - name: Setup Rust environment
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          target: thumbv6m-none-eabi
+          override: true
+          profile: minimal
+      - name: Cache Rust dependencies
+        uses: actions/cache@v3
+        with:
+          path: |
+            ${{ needs.setup_rust.outputs.cargo_home }}
+            target/
+          key: ${{ runner.os }}-rust-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-rust-
       - name: Install deps
         run: pip install ledgerblue --break-system-packages
 
@@ -257,19 +335,47 @@ jobs:
           prerelease: false
 
   build_package_stax:
-    needs: [configure, build, build_ledger, test_zemu, rust_tests]
+    needs:
+      [
+        configure,
+        setup_rust,
+        build_ledger,
+        tests_zemu_setup,
+        test_zemu,
+        rust_tests,
+      ]
     if: ${{ github.ref == 'refs/heads/main' }}
     runs-on: ubuntu-latest
     container:
       image: zondax/ledger-app-builder:latest
-      options: --user ${{ needs.configure.outputs.uid_gid }}
+      options: --user root
       env:
         BOLOS_SDK: /opt/stax-secure-sdk
+        HOME: /root
+        CARGO_HOME: ${{ needs.setup_rust.outputs.cargo_home }}
+        RUSTUP_HOME: ${{ needs.setup_rust.outputs.rustup_home }}
+        PATH: /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:${{ needs.setup_rust.outputs.cargo_home }}/bin
     steps:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          submodules: true
+          submodules: recursive
+      - name: Setup Rust environment
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          target: thumbv6m-none-eabi
+          override: true
+          profile: minimal
+      - name: Cache Rust dependencies
+        uses: actions/cache@v3
+        with:
+          path: |
+            ${{ needs.setup_rust.outputs.cargo_home }}
+            target/
+          key: ${{ runner.os }}-rust-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-rust-
       - name: Install deps
         run: pip install ledgerblue --break-system-packages
 
@@ -293,19 +399,47 @@ jobs:
           prerelease: false
 
   build_package_flex:
-    needs: [configure, build, build_ledger, test_zemu, rust_tests]
+    needs:
+      [
+        configure,
+        setup_rust,
+        build_ledger,
+        tests_zemu_setup,
+        test_zemu,
+        rust_tests,
+      ]
     if: ${{ github.ref == 'refs/heads/main' }}
     runs-on: ubuntu-latest
     container:
       image: zondax/ledger-app-builder:latest
-      options: --user ${{ needs.configure.outputs.uid_gid }}
+      options: --user root
       env:
         BOLOS_SDK: /opt/flex-secure-sdk
+        HOME: /root
+        CARGO_HOME: ${{ needs.setup_rust.outputs.cargo_home }}
+        RUSTUP_HOME: ${{ needs.setup_rust.outputs.rustup_home }}
+        PATH: /usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:${{ needs.setup_rust.outputs.cargo_home }}/bin
     steps:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          submodules: true
+          submodules: recursive
+      - name: Setup Rust environment
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          target: thumbv6m-none-eabi
+          override: true
+          profile: minimal
+      - name: Cache Rust dependencies
+        uses: actions/cache@v3
+        with:
+          path: |
+            ${{ needs.setup_rust.outputs.cargo_home }}
+            target/
+          key: ${{ runner.os }}-rust-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-rust-
       - name: Install deps
         run: pip install ledgerblue --break-system-packages
 
